--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.mainBoard {
+  border: 1px solid #e0e0e0;
+  border-radius: 2px;
+  margin: 50px 20px 50px 100px;
+  width: 1200px;
+}
+.boardHeader {
+  color: aqua;
+}
